update_endpoint_for_dashboard
